--- a/KsheeraSagara/KsheeraSagara/KsheeraSagara.csproj
+++ b/KsheeraSagara/KsheeraSagara/KsheeraSagara.csproj
@@ -35,8 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Helpers\FastCollection.cs" />
     <Compile Include="Model\Member.cs" />
     <Compile Include="Model\MilkPurchaseModel.cs" />
+    <Compile Include="Model\RatechartModel.cs" />
     <Compile Include="Model\SessionModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\SharedValues.cs" />
@@ -45,6 +47,7 @@
     <Compile Include="ViewModels\MainNavigationPageViewModel.cs" />
     <Compile Include="ViewModels\MembersPageViewModel.cs" />
     <Compile Include="ViewModels\MilkPurchasePageViewModel.cs" />
+    <Compile Include="ViewModels\RateChartPageViewModel.cs" />
     <Compile Include="ViewModels\TruckSheetPageViewModel.cs" />
     <Compile Include="Views\LocalSalePage.xaml.cs">
       <DependentUpon>LocalSalePage.xaml</DependentUpon>
@@ -54,6 +57,9 @@
     </Compile>
     <Compile Include="Views\MilkPurchasePage.xaml.cs">
       <DependentUpon>MilkPurchasePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\RateChartPage.xaml.cs">
+      <DependentUpon>RateChartPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TruckSheetPage.xaml.cs">
       <DependentUpon>TruckSheetPage.xaml</DependentUpon>
@@ -137,6 +143,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\MembersPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\RateChartPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
