--- a/KsheeraSagara/KsheeraSagara.Droid/KsheeraSagara.Droid.csproj
+++ b/KsheeraSagara/KsheeraSagara.Droid/KsheeraSagara.Droid.csproj
@@ -110,6 +110,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileHelper.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
