--- a/KsheeraSagara/KsheeraSagara/KsheeraSagara.csproj
+++ b/KsheeraSagara/KsheeraSagara/KsheeraSagara.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Model\SessionModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\SharedValues.cs" />
+    <Compile Include="Validator\EntryLengthValidatorBehavior.cs" />
     <Compile Include="ViewModels\BasePageViewModel.cs" />
     <Compile Include="ViewModels\LocalSalePageViewModel.cs" />
     <Compile Include="ViewModels\MainNavigationPageViewModel.cs" />
