--- a/KsheeraSagara/KsheeraSagara/project.json
+++ b/KsheeraSagara/KsheeraSagara/project.json
@@ -2,7 +2,7 @@
   "supports": {},
   "dependencies": {
     "CommonServiceLocator": "1.3.0",
-    "LiteDB": "3.1.0",
+    "LiteDB": "3.0.0-beta2",
     "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
     "NETStandard.Library": "1.6.1",
     "Prism.Core": "6.3.0",
@@ -12,7 +12,7 @@
     "Xamarin.Forms": "2.3.4.224"
   },
   "frameworks": {
-    "netstandard1.6": {
+    "netstandard1.4": {
       "imports": "portable-net45+wpa81+wp8+win8"
     }
   }
